--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,8 @@
 book_filename: "bookdownproj"
 output_dir: docs
 delete_merged_file: true
-edit: https://github.com/YOUR GITHUB USERNAME/YOUR REPO NAME/edit/master/%s
-view: https://github.com/YOUR GITHUB USERNAME/YOUR REPO NAME/blob/master/%s
+edit: https://github.com/cvasquezvel/Muestreo-por-etapas-en-cultivos-agricolas/edit/master/%s
+view: https://github.com/cvasquezvel/Muestreo-por-etapas-en-cultivos-agricolas/blob/master/%s
 language:
   ui:
     chapter_name: "Chapter "
